--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="gb2312">
-<title>菜鸟教程(runoob.com)</title>
+<title></title>
 <script>
 function getVote(int) {
   if (window.XMLHttpRequest) {
